--- a/fifaResults/pom.xml
+++ b/fifaResults/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>okhttp</artifactId>
             <version>2.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.14.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
