--- a/spring-data-jpa-2/src/main/resources/application.properties
+++ b/spring-data-jpa-2/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
